--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1603321536"></script>
-      <script src="dom.js?v=1603321536"></script>
-      <script src="api.js?v=1603321536"></script>
-      <script src="index.js?v=1603321536"></script>
-      <script src="sbs2-markup/highlight.js?v=1603321536"></script>
-      <script src="sbs2-markup/parse.js?v=1603321536"></script>
-      <script src="sbs2-markup/render.js?v=1603321536"></script>
+      <script src="libbo.js?v=1603325291"></script>
+      <script src="dom.js?v=1603325291"></script>
+      <script src="api.js?v=1603325291"></script>
+      <script src="index.js?v=1603325291"></script>
+      <script src="sbs2-markup/highlight.js?v=1603325291"></script>
+      <script src="sbs2-markup/parse.js?v=1603325291"></script>
+      <script src="sbs2-markup/render.js?v=1603325291"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1603321536" />
+      <link rel="stylesheet" href="index.css?v=1603325291" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -1071,7 +1071,8 @@ function retext(el, attr)
               data-pinned data-permissions=".leftPanePerms">
             <!-- WARN: DUPLICATED IN ROUTEPAGE -->
             <div class="uk-flex-inline">
-               <h1 data-title=".textContent" class="uk-width-expand uk-margin-small-right"></h1>
+               <h1 data-title=".textContent" class="uk-width-expand uk-margin-small-right"
+                  data-banned></h1>
                <div data-tmpl="pagecontrols" hidden></div>
             </div>
             <img data-avatar="src" width=100 class="uk-align-right avatar">
@@ -1234,22 +1235,22 @@ function retext(el, attr)
          <div id="routeadmin" data-superonly class="uk-container uk-margin-top uk-margin-bottom">
             <h1>Admin Page</h1>
             <form data-banform onsubmit="return false" class="uk-form-stacked lightblock">
-      <label class="uk-form-label" uk-margin>
+      <label class="uk-form-label"> <!-- uk-margin>-->
          <span>User:</span>
          <div data-userselect name="bannedUserId"></div>
       </label>
-      <label class="uk-form-label" uk-margin>
+      <label class="uk-form-label"> <!-- uk-margin>-->
          <span>Ban type:</span>
          <select class="uk-select" name="type" required>
             <option value="public">Public only</option>
             <option value="none">None</option>
          </select>
       </label>
-      <label class="uk-form-label" uk-margin>
+      <label class="uk-form-label"><!-- uk-margin>-->
          <span>Ban Hours:</span>
          <input type="number" min="0" step="0.1" name="expireDate" class="uk-input" required>
       </label>
-      <label class="uk-form-label" uk-margin>
+      <label class="uk-form-label"><!-- uk-margin>-->
          <span>Message:</span>
          <input name="message" class="uk-input" required>
       </label>
