Title notifications because people like them

--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
       <meta name="viewport" content="width=device-width"><!--,maximum-scale=1">-->
       <meta name="rating" content="general">
       <meta name="description" content="New SmileBASIC Source">
-      <link rel="shortcut icon" href="favicon.ico">
+      <link data-favicon rel="shortcut icon" href="favicon.ico">
       <!-- LOC:UIFRAMEWORK -->
       <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css" />
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1603340842"></script>
-      <script src="dom.js?v=1603340842"></script>
-      <script src="api.js?v=1603340842"></script>
-      <script src="index.js?v=1603340842"></script>
-      <script src="sbs2-markup/highlight.js?v=1603340842"></script>
-      <script src="sbs2-markup/parse.js?v=1603340842"></script>
-      <script src="sbs2-markup/render.js?v=1603340842"></script>
+      <script src="libbo.js?v=1603400264"></script>
+      <script src="dom.js?v=1603400264"></script>
+      <script src="api.js?v=1603400264"></script>
+      <script src="index.js?v=1603400264"></script>
+      <script src="sbs2-markup/highlight.js?v=1603400264"></script>
+      <script src="sbs2-markup/parse.js?v=1603400264"></script>
+      <script src="sbs2-markup/render.js?v=1603400264"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1603340842" />
+      <link rel="stylesheet" href="index.css?v=1603400264" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
