--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1603605158"></script>
-      <script src="dom.js?v=1603605158"></script>
-      <script src="api.js?v=1603605158"></script>
-      <script src="index.js?v=1603605158"></script>
-      <script src="sbs2-markup/highlight.js?v=1603605158"></script>
-      <script src="sbs2-markup/parse.js?v=1603605158"></script>
-      <script src="sbs2-markup/render.js?v=1603605158"></script>
+      <script src="libbo.js?v=1603614651"></script>
+      <script src="dom.js?v=1603614651"></script>
+      <script src="api.js?v=1603614651"></script>
+      <script src="index.js?v=1603614651"></script>
+      <script src="sbs2-markup/highlight.js?v=1603614651"></script>
+      <script src="sbs2-markup/parse.js?v=1603614651"></script>
+      <script src="sbs2-markup/render.js?v=1603614651"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1603605158" />
+      <link rel="stylesheet" href="index.css?v=1603614651" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -1001,7 +1001,7 @@ function retext(el, attr)
          <li id="slideshowitem">
             <img data-src=".src" uk-cover>
          </li>
-         <div id="contentimage"><img data-src="src"></div>
+         <div id="contentimage" class="uk-flex uk-flex-middle" tabindex=2><img data-src="src"></div>
          <div id="collectionitem" class="uk-flex uk-flex-middle uk-card uk-card-default"
             data-inline>
             <div data-item class="uk-width-expand"></div>
