--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1603614651"></script>
-      <script src="dom.js?v=1603614651"></script>
-      <script src="api.js?v=1603614651"></script>
-      <script src="index.js?v=1603614651"></script>
-      <script src="sbs2-markup/highlight.js?v=1603614651"></script>
-      <script src="sbs2-markup/parse.js?v=1603614651"></script>
-      <script src="sbs2-markup/render.js?v=1603614651"></script>
+      <script src="libbo.js?v=1603647162"></script>
+      <script src="dom.js?v=1603647162"></script>
+      <script src="api.js?v=1603647162"></script>
+      <script src="index.js?v=1603647162"></script>
+      <script src="sbs2-markup/highlight.js?v=1603647162"></script>
+      <script src="sbs2-markup/parse.js?v=1603647162"></script>
+      <script src="sbs2-markup/render.js?v=1603647162"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1603614651" />
+      <link rel="stylesheet" href="index.css?v=1603647162" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -187,7 +187,7 @@ function retext(el, attr)
       <div id="website" class="uk-flex uk-flex-column uk-height-1-1">
          <!-- LOC:TOPNAV -->
          <div id="topnav" class="databar uk-flex-middle" uk-navbar>
-            <a data-connectionindicator class="uk-flex-none" href=".">
+            <a data-connectionindicator class="uk-flex-none" href="." data-spa>
                <img uk-svg="ratio: 2" data-src="sbs.svg">
             </a>
             <!-- LOC:BREADCRUMBS -->
