--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1603667579"></script>
-      <script src="dom.js?v=1603667579"></script>
-      <script src="api.js?v=1603667579"></script>
-      <script src="index.js?v=1603667579"></script>
-      <script src="sbs2-markup/highlight.js?v=1603667579"></script>
-      <script src="sbs2-markup/parse.js?v=1603667579"></script>
-      <script src="sbs2-markup/render.js?v=1603667579"></script>
+      <script src="libbo.js?v=1603738309"></script>
+      <script src="dom.js?v=1603738309"></script>
+      <script src="api.js?v=1603738309"></script>
+      <script src="index.js?v=1603738309"></script>
+      <script src="sbs2-markup/highlight.js?v=1603738309"></script>
+      <script src="sbs2-markup/parse.js?v=1603738309"></script>
+      <script src="sbs2-markup/render.js?v=1603738309"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1603667579" />
+      <link rel="stylesheet" href="index.css?v=1603738309" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -58,14 +58,20 @@ var ttoic = {
 };
 function typeToIcon(el, replace)
 {
-   replace = replace || "UNDEFINED";
    if(!el.origicon)
       el.origicon = el.getAttribute("uk-icon");
-   if(replace)
+   if(replace !== undefined)
    {
       el.curicon = replace;
-      el.setAttribute("uk-icon", el.origicon + ";icon: " + 
-         (ttoic[replace] || "close"));
+      if(replace === false)
+      {
+         el.removeAttribute("uk-icon");
+      }
+      else
+      {
+         el.setAttribute("uk-icon", el.origicon + ";icon: " + 
+            (ttoic[replace] || "close"));
+      }
    } 
    return el.curicon;
 }
@@ -731,9 +737,11 @@ function retext(el, attr)
             <div class="pwnamerow uk-flex uk-flex-middle">
                <!--<span class="uk-flex-none uk-margin-small-right" data-type=".typeToIcon" 
                   uk-icon="ratio: 1.0"></span>-->
-               <span data-type=".typeToIcon" class="uk-flex-none uk-margin-small-right uk-flex uk-flex-middle"
+               <span data-type=".typeToIcon" class="pageicon uk-flex-none uk-margin-small-right 
+                  uk-flex uk-flex-middle uk-position-relative"
                   uk-icon="ratio: 1.0">
                   <img data-image=".srcUnhide" class="outlined" hidden width=20>
+                  <div data-private=".srcUnhide" class="uk-cover lock" hidden>🔒</div>
                </span>
                <a data-pwlink="href" class="uk-flex-1 uk-text-truncate uk-text-emphasis pwname" 
                   data-spa data-pwname=".textContent"></a>
@@ -848,8 +856,10 @@ function retext(el, attr)
             </label>
          </div>
          <div id="searchresult" class="uk-flex uk-flex-middle">
-            <span data-type=".typeToIcon" class="uk-flex-none uk-flex uk-flex-middle" uk-icon="ratio: 1.0">
+            <span data-type=".typeToIcon" class="uk-flex-none uk-flex uk-flex-middle
+               uk-position-relative pageicon" uk-icon="ratio: 1.0">
                <img data-image=".srcUnhide" class="outlined" hidden width=20>
+               <div data-private=".srcUnhide" class="uk-cover lock" hidden>🔒</div>
             </span>
             <!--<img data-image="src" data-type=".typeToIcon" class="uk-flex-none" width=20>-->
             <a data-spa data-name=".textContent" data-link="href" 
@@ -867,16 +877,22 @@ function retext(el, attr)
          </div>
          <div id="pageitem" class="uk-flex uk-flex-wrap uk-flex-middle">
             <!--<span class="uk-flex-none pageicon" data-type=".typeToIcon" uk-icon="ratio: 1.0"></span>-->
-            <span data-type=".typeToIcon" class="pageicon uk-flex-none uk-flex uk-flex-middle 
-               ufk-position-relative">
-               <!-- Reusing "srcUnhide" because it does the same thing :( -->
-               <img data-image=".srcUnhide" class="outlined" hidden width=20>
-            </span>
+            <!--<div class="uk-position-relative">-->
+               <span data-type=".typeToIcon" class="pageicon uk-flex-none uk-flex uk-flex-middle
+                  uk-position-relative">
+                  <!-- Reusing "srcUnhide" because it does the same thing :( -->
+                  <img data-image=".srcUnhide" class="outlined" hidden width=20>
+                  <div data-private=".srcUnhide" class="uk-cover lock" hidden>🔒</div>
+                  <!--<span class="uk-cover lock" uk-icon="icon: lock; ratio:
+                     0.5"></span>-->
+               </span>
+            <!--</div>-->
             <a class="uk-width-expand title uk-link-text" data-link="href" data-spa data-name=".textContent"></a>
             <!--<span class="statuses">
             </span>-->
             <time data-time=".textContent" class="uk-flex-none uk-text-meta"></time>
-            <a class="uk-flex-none uk-flex avatar uk-position-relative" data-spa data-userlink="href">
+            <a class="uk-flex-none uk-flex uk-flex-middle avatar uk-position-relative" 
+               data-spa data-userlink="href">
                <img data-avatar="src" width=25>
                <div data-pinned=".srcUnhide" class="uk-cover pin" hidden>📌</div>
             </a>
