--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1603742134"></script>
-      <script src="dom.js?v=1603742134"></script>
-      <script src="api.js?v=1603742134"></script>
-      <script src="index.js?v=1603742134"></script>
-      <script src="sbs2-markup/highlight.js?v=1603742134"></script>
-      <script src="sbs2-markup/parse.js?v=1603742134"></script>
-      <script src="sbs2-markup/render.js?v=1603742134"></script>
+      <script src="libbo.js?v=1603765425"></script>
+      <script src="dom.js?v=1603765425"></script>
+      <script src="api.js?v=1603765425"></script>
+      <script src="index.js?v=1603765425"></script>
+      <script src="sbs2-markup/highlight.js?v=1603765425"></script>
+      <script src="sbs2-markup/parse.js?v=1603765425"></script>
+      <script src="sbs2-markup/render.js?v=1603765425"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1603742134" />
+      <link rel="stylesheet" href="index.css?v=1603765425" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -898,7 +898,7 @@ function retext(el, attr)
             </a>
          </div>
          <div id="history" class="uk-display-block uk-position-relative">
-            <h4>Activity:</h4>
+            <!--<h4>Activity:</h4>-->
             <!--<div class="uk-cover historyloading" uk-spinner="ratio: 2"></div>-->
             <div class="historycontainer"> <!-- uk-overflow-auto>-->
             </div>
