Fix for youtube + added dark-contrast

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1603779041"></script>
-      <script src="dom.js?v=1603779041"></script>
-      <script src="api.js?v=1603779041"></script>
-      <script src="index.js?v=1603779041"></script>
-      <script src="sbs2-markup/highlight.js?v=1603779041"></script>
-      <script src="sbs2-markup/parse.js?v=1603779041"></script>
-      <script src="sbs2-markup/render.js?v=1603779041"></script>
+      <script src="libbo.js?v=1603814818"></script>
+      <script src="dom.js?v=1603814818"></script>
+      <script src="api.js?v=1603814818"></script>
+      <script src="index.js?v=1603814818"></script>
+      <script src="sbs2-markup/highlight.js?v=1603814818"></script>
+      <script src="sbs2-markup/parse.js?v=1603814818"></script>
+      <script src="sbs2-markup/render.js?v=1603814818"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1603779041" />
+      <link rel="stylesheet" href="index.css?v=1603814818" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -714,6 +714,13 @@ function retext(el, attr)
          </div>
       </div>
       <!-- LOC:TEMPLATES -->
+      <template id="templates2">
+         <!-- Same as before, but some things will have data-thing="*" -->
+         <li id="log" class="uk-flex uk-text-break">
+            <span data-message=".textContent" data-level=".loglevel" class="uk-width-expand logmessage"></span>
+            <time data-time=".textContent"></time>
+         </li>
+      </template>
       <template id="templates" style="display: none">
          <li id="log" class="uk-flex uk-text-break">
             <span data-message=".textContent" data-level=".loglevel" class="uk-width-expand logmessage"></span>
