--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1603817103"></script>
-      <script src="dom.js?v=1603817103"></script>
-      <script src="api.js?v=1603817103"></script>
-      <script src="index.js?v=1603817103"></script>
-      <script src="sbs2-markup/highlight.js?v=1603817103"></script>
-      <script src="sbs2-markup/parse.js?v=1603817103"></script>
-      <script src="sbs2-markup/render.js?v=1603817103"></script>
+      <script src="libbo.js?v=1603818800"></script>
+      <script src="dom.js?v=1603818800"></script>
+      <script src="api.js?v=1603818800"></script>
+      <script src="index.js?v=1603818800"></script>
+      <script src="sbs2-markup/highlight.js?v=1603818800"></script>
+      <script src="sbs2-markup/parse.js?v=1603818800"></script>
+      <script src="sbs2-markup/render.js?v=1603818800"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1603817103" />
+      <link rel="stylesheet" href="index.css?v=1603818800" />
       <script>
+if (location.protocol !== "https:") {
+   console.log("Redirecting to https, this is slow, please complain that this should be a server thing");
+  location.protocol = "https:";
+}
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
 {
