--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1603818800"></script>
-      <script src="dom.js?v=1603818800"></script>
-      <script src="api.js?v=1603818800"></script>
-      <script src="index.js?v=1603818800"></script>
-      <script src="sbs2-markup/highlight.js?v=1603818800"></script>
-      <script src="sbs2-markup/parse.js?v=1603818800"></script>
-      <script src="sbs2-markup/render.js?v=1603818800"></script>
+      <script src="libbo.js?v=1603826936"></script>
+      <script src="dom.js?v=1603826936"></script>
+      <script src="api.js?v=1603826936"></script>
+      <script src="index.js?v=1603826936"></script>
+      <script src="sbs2-markup/highlight.js?v=1603826936"></script>
+      <script src="sbs2-markup/parse.js?v=1603826936"></script>
+      <script src="sbs2-markup/render.js?v=1603826936"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1603818800" />
+      <link rel="stylesheet" href="index.css?v=1603826936" />
       <script>
 if (location.protocol !== "https:") {
    console.log("Redirecting to https, this is slow, please complain that this should be a server thing");
@@ -1067,7 +1067,10 @@ function retext(el, attr)
             <div data-slideshowcontainer>
                <div data-tmpl="slideshow"></div>
             </div>
-            <h3><a href="?p=category-0" data-spa>Browse Everything</a></h3>
+            <h3>
+               <a href="?p=category-0" data-spa>Browse Everything</a>
+               <a href="/12" class="uk-text-small uk-align-right">Alternate frontend</a>
+            </h3>
             <div class="" data-homehistory></div>
             <!--<a href="?p=test" data-spa>Test area</a>-->
          </div>
