Userlist in oldschool shows tile too

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1603832844"></script>
-      <script src="dom.js?v=1603832844"></script>
-      <script src="api.js?v=1603832844"></script>
-      <script src="index.js?v=1603832844"></script>
-      <script src="sbs2-markup/highlight.js?v=1603832844"></script>
-      <script src="sbs2-markup/parse.js?v=1603832844"></script>
-      <script src="sbs2-markup/render.js?v=1603832844"></script>
+      <script src="libbo.js?v=1603833138"></script>
+      <script src="dom.js?v=1603833138"></script>
+      <script src="api.js?v=1603833138"></script>
+      <script src="index.js?v=1603833138"></script>
+      <script src="sbs2-markup/highlight.js?v=1603833138"></script>
+      <script src="sbs2-markup/parse.js?v=1603833138"></script>
+      <script src="sbs2-markup/render.js?v=1603833138"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1603832844" />
+      <link rel="stylesheet" href="index.css?v=1603833138" />
       <script>
 if (location.protocol !== "https:") {
    console.log("Redirecting to https, this is slow, please complain that this should be a server thing");
@@ -246,7 +246,7 @@ function retext(el, attr)
                </div> 
                <!-- Need separate containers because lazy: one is for user
                   toggle, the other is for page toggle -->
-               <div data-loginonly class="uk-flex-none">
+               <div id="discussionuserlistcontainer" data-loginonly class="uk-flex-none">
                   <div id="discussionuserlist" class="uk-flex uk-flex-wrap"></div>
                </div>
                <div id="discussionscontainer" data-hide2 class="uk-flex-1 uk-flex uk-flex-column">
