Allow date updates all the time, just ignore them in uikit mutation observer

--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@ function retext(el, attr)
                </a>
             </div>
             <div class="uk-flex uk-flex-bottom">
-               <span data-pwtime=".textContent"
+               <span data-nouikit data-pwtime=".textContent"
                   class="uk-flex-1 ufk-text-right pw-time uk-text-meta">Now</span>
                <div class="pw-users uk-flex"></div>
             </div>
