--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1603870435"></script>
-      <script src="dom.js?v=1603870435"></script>
-      <script src="api.js?v=1603870435"></script>
-      <script src="index.js?v=1603870435"></script>
-      <script src="sbs2-markup/highlight.js?v=1603870435"></script>
-      <script src="sbs2-markup/parse.js?v=1603870435"></script>
-      <script src="sbs2-markup/render.js?v=1603870435"></script>
+      <script src="libbo.js?v=1603932886"></script>
+      <script src="dom.js?v=1603932886"></script>
+      <script src="api.js?v=1603932886"></script>
+      <script src="index.js?v=1603932886"></script>
+      <script src="sbs2-markup/highlight.js?v=1603932886"></script>
+      <script src="sbs2-markup/parse.js?v=1603932886"></script>
+      <script src="sbs2-markup/render.js?v=1603932886"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1603870435" />
+      <link rel="stylesheet" href="index.css?v=1603932886" />
       <script>
 if (location.protocol !== "https:") {
    console.log("Redirecting to https, this is slow, please complain that this should be a server thing");
@@ -190,6 +190,18 @@ function retext(el, attr)
          x.textContent = x.getAttribute(attr);
    });
 }
+function leftpaneclick(event)
+{
+   if(event.target.hasAttribute("data-contentimageimage"))
+   {
+      event.target.setAttribute('data-expand','');
+   }
+   else if(event.target.tagName == "DIV")// && event.target !== postdiscussiontext)
+   {
+      [...leftpane.querySelectorAll("[data-contentimageimage][data-expand]")]
+         .forEach(x => x.removeAttribute('data-expand'));
+   }
+}
       </script>
    </head>
    <!-- LOC:BODY -->
@@ -219,7 +231,8 @@ function retext(el, attr)
          <div id="mainwindow" class="uk-flex-1 uk-grid-collapse uk-overflow-hidden" uk-grid>
             <!-- LOC:LEFTPANE -->
             <div id="leftpane" class=
-              "uk-width-expand uk-flex uk-flex-column uk-height-1-1 uk-overflow-hidden">
+              "uk-width-expand uk-flex uk-flex-column uk-height-1-1 uk-overflow-hidden"
+               onclick="leftpaneclick(event);" >
                <!-- LOC:MAINCONTENT -->
                <div id="maincontentcontainer" data-hide0 uk-overflow-auto>
                   <div id="maincontentloading" class="uk-text-meta uk-flex uk-flex-middle" hidden>
@@ -1028,7 +1041,8 @@ function retext(el, attr)
          <li id="slideshowitem">
             <img data-src=".src" uk-cover>
          </li>
-         <div id="contentimage" class="uk-flex uk-flex-middle" tabindex=2><img data-src="src"></div>
+         <div id="contentimage" class="uk-flex
+            uk-flex-middle"><img data-nouikit data-contentimageimage tabindex="2" data-src="src"></div>
          <div id="collectionitem" class="uk-flex uk-flex-middle uk-card uk-card-default"
             data-inline>
             <div data-item class="uk-width-expand"></div>
